--- a/home.html
+++ b/home.html
@@ -263,26 +263,26 @@
 				</div>
 			</div>
 			<div class="container">
-				<div class="from bottom">
+				<div class="from-bottom">
 					<div class="luxo-content">
 						<div class="row">
-							<div class="col-2">
-								<img src="template05/img/icon1/Vector Smart Object.png" alt="">
+							<div class="col-2" style="text-align: center;">
+								<img id="smart-obj" src="template05/img/icon1/Vector Smart Object.png" alt="">
 							</div>
 							<div class="col-2">
-								<img src="template05/img/icon1/Vector Smart Object1.png" alt="">
+								<img id="smart-obj" src="template05/img/icon1/Vector Smart Object1.png" alt="">
 							</div>
 							<div class="col-2">
-								<img src="template05/img/icon1/Vector Smart Object2.png" alt="">
+								<img id="smart-obj" src="template05/img/icon1/Vector Smart Object2.png" alt="">
 							</div>
 							<div class="col-2">
-								<img src="template05/img/icon1/Vector Smart Object3.png" alt="">
+								<img id="smart-obj" src="template05/img/icon1/Vector Smart Object3.png" alt="">
 							</div>
 							<div class="col-2">
-								<img src="template05/img/icon1/Vector Smart Object4.png" alt="">
+								<img id="smart-obj" src="template05/img/icon1/Vector Smart Object4.png" alt="">
 							</div>
 							<div class="col-2">
-								<img src="template05/img/icon1/Vector Smart Object5.png" alt="">
+								<img id="smart-obj" src="template05/img/icon1/Vector Smart Object5.png" alt="">
 							</div>
 						</div>
 					</div>
@@ -294,48 +294,66 @@
 					<div class="list-product">
 						<div class="row">
 							<div class="col-4">
-								<div class="item-product">
+								<div class="item-product1">
 									<img id="img1" src="template05/img/icon1/images/anh-xam_03.jpg" alt="">
 									<div class="row">
 										<div class="d-flex">
-											<img src="template05/img/icon/user.png" alt="">
-											<p>By Admin</p>
-											<img src="template05/img/icon1/images/Shape 16.png" alt="">
-											<p>10 January 2020</p>
+											<div class="col-6 d-flex">
+												<img id="smart-obj1" src="template05/img/icon/user.png" alt="">
+												<p>By Admin</p>
+											</div>
+											<div class="col-6 d-flex">
+												<img id="smart-obj1" src="template05/img/icon1/images/Shape 16.png" alt="">
+												<p>10 January 2020</p>
+											</div>
 										</div>
 									</div>
-									<h5>While Polo Men's T-Shirt</h5>
-									<p>$34.00</p>
+									<div class="item-content">
+										<h5>Out App User Use Mobile One His Mobile</h5>
+										<a href="">Read More -></a>
+									</div>
 								</div>
 							</div> 
 							<div class="col-4">
-								<div class="item-product">
+								<div class="item-product1">
 									<img id="img1" src="template05/img/icon1/images/anh-xam_03.jpg" alt="">
 									<div class="row">
 										<div class="d-flex">
-											<img src="template05/img/icon/user.png" alt="">
-											<p>By Admin</p>
-											<img src="template05/img/icon1/images/Shape 16.png" alt="">
-											<p>10 January 2020</p>
+											<div class="col-6 d-flex">
+												<img id="smart-obj1" src="template05/img/icon/user.png" alt="">
+												<p>By Admin</p>
+											</div>
+											<div class="col-6 d-flex">
+												<img id="smart-obj1" src="template05/img/icon1/images/Shape 16.png" alt="">
+												<p>10 January 2020</p>
+											</div>
 										</div>
 									</div>
-									<h5>While Polo Men's T-Shirt</h5>
-									<p>$34.00</p>
+									<div class="item-content">
+										<h5>Out App User Use Mobile One His Mobile</h5>
+										<a href="">Read More -></a>
+									</div>
 								</div>
 							</div>
 							<div class="col-4">
-								<div class="item-product">
+								<div class="item-product1">
 									<img id="img1" src="template05/img/icon1/images/anh-xam_03.jpg" alt="">
 									<div class="row">
 										<div class="d-flex">
-											<img src="template05/img/icon/user.png" alt="">
-											<p>By Admin</p>
-											<img src="template05/img/icon1/images/Shape 16.png" alt="">
-											<p>10 January 2020</p>
+											<div class="col-6 d-flex">
+												<img id="smart-obj1" src="template05/img/icon/user.png" alt="">
+												<p>By Admin</p>
+											</div>
+											<div class="col-6 d-flex">
+												<img id="smart-obj1" src="template05/img/icon1/images/Shape 16.png" alt="">
+												<p>10 January 2020</p>
+											</div>
 										</div>
 									</div>
-									<h5>While Polo Men's T-Shirt</h5>
-									<p>$34.00</p>
+									<div class="item-content">
+										<h5>Out App User Use Mobile One His Mobile</h5>
+										<a href="">Read More -></a>
+									</div>
 								</div>
 							</div>
 						</div>
