--- a/home.html
+++ b/home.html
@@ -360,6 +360,57 @@
 					</div>
 				</div>
 			</div>
+			<footer>
+				<div class="container">
+					<div class="row">
+						<div class="col-3">
+							<div class="address">
+								<img src="/template05/img/icon/logo.png" alt="">
+								<p>No. 342 - London Oxford Street,</p>
+								<p>012 United States</p>
+								<p>Youremail@gmail.com</p>
+								<p>+0283 838 8393</p>
+								<a href=""><img src="/template05/img/icon/facebook.png" alt=""></a>
+								<a href=""><img src="/template05/img/icon/twiter.png" alt=""></a>
+								<a href=""><img src="/template05/img/icon/in.png" alt=""></a>
+								<a href=""><img src="/template05/img/icon/google.png" alt=""></a>
+								<a href=""><img src="/template05/img/icon/p.png" alt=""></a>
+							</div>
+						</div>
+						<div class="col-2">
+							<div class="useful">
+								<h2>Useful Links</h2>
+								<p>About Us</p>
+								<p>Privacy Policy</p>
+								<p>Term & Conditions</p>
+								<p>Contact Us</p>
+								<p>Help & Support</p>
+							</div>
+						</div>
+						<div class="col-2">
+							<div class="account">
+								<h2>My Account</h2>
+								<p>My Account</p>
+								<p>My Cart</p>
+								<p>My WIshlist</p>
+								<p>Registration</p>
+								<p>Check Out</p>
+							</div>
+						</div>
+						<div class="col-5">
+							<div class="subcribe">
+								<h2>Subscribe Our NewSletter</h2>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, eum possimus, esse illo velit quidem voluptate laboriosam, sunt similique provident animi nemo laudantium reiciendis </p>
+							</div>
+							<div class="input-group">
+								<input type="search" class="form-control rounded" placeholder="Your email address" aria-label="Your email address"
+								aria-describedby="search-addon"/>
+								<button type="button" class="btn btn-outline-primary" style="background-color: #fe3e57; color: #fff;">SUBSCRIBE</button>
+							  </div>
+						</div>
+					</div>
+					<p></p>
+				</div>
 		</main>
     </div>
 
