--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="template05/css/style-home.css">
 </head>
 <body>
-    <div>
+    <div class="wrap">
         <header>
 			<div class="container">
 				<div class="row">
